Envoy/envoy.yml
# Админка
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

# Статичные ресурсы (API)
static_resources:
  # Какой порт слушает envoy
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # Определение даунстримов
              - match:
                  prefix: "/rates"
                route:
                  cluster: statictics_service
              - match:
                  prefix: "/uaa/oauth/token"
                route:
                  prefix_rewrite: "/oauth/token"
                  host_rewrite_literal: "auth:5000"
                  cluster: auth_service
              - match:
                  prefix: "/auth/"
                route:
                  prefix_rewrite: "/"
                  cluster: auth_service
              - match:
                  prefix: "/accounts"
                route:
                  cluster: account_service
              - match:
                  prefix: "/notifications/recipients"
                route:
                  prefix_rewrite: "/recipients"
                  cluster: notification_service
              # Раздача статики через ocelot
              - match:
                  prefix: "/"
                route:
                  cluster: ocelot_service
              

  clusters:
  - name: ocelot_service
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: ocelot_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ocelot
                port_value: 5000
  - name: account_service
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: account_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: account
                port_value: 5000
  - name: notification_service
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: notification_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: notification
                port_value: 5000
  - name: statictics_service
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: statictics_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: statistics
                port_value: 5000
  - name: auth_service
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: auth_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auth
                port_value: 5000
